--- a/angularHTMLayout/coffee/tableComplexeEnhanced.ng.html
+++ b/angularHTMLayout/coffee/tableComplexeEnhanced.ng.html
@@ -22,7 +22,7 @@
     <div class="row-cell row-cell-value"><input type="checkbox" ng-model="ng.config.groupable" /></div>
   </div>
   <div class="bootstrap-iso rowFlex">
-    <div class="row-cell row-cell-label">{{$root.i18n('itemPerPages')}} :&nbsp;</div>
+    <div title="exemple : 5,10,50,100,500" class="row-cell row-cell-label">{{$root.i18n('itemPerPages')}} :&nbsp;</div>
     <div class="row-cell row-cell-value"><input type="text" ng-model="ng.config.itemPerPages" /></div>
   </div>
   <div class="rowFlex bootstrap-iso">
