--- a/ngDirectives/niceList/niceList.ng.html
+++ b/ngDirectives/niceList/niceList.ng.html
@@ -7,12 +7,12 @@
       <span ng-repeat="asso in associationsIcon" ng-if="asso.length > 0" class="icon" aria-hidden="true" ng-bind-html="getCDS(asso[0])"></span>
     </span>
     <div class="tags">
-      <div ng-repeat="processValue in tagProperties" ng-init="sectionIndex = $index">
+      <div ng-if="processValue != '__|UndefinedValue|__'" ng-repeat="processValue in tagProperties" ng-init="sectionIndex = $index">
         <div
           ng-if="splitProp && splitProp!=''"
           ng-style="{'background-color':color[sectionIndex]['background-color'],'color':color[sectionIndex]['color']}"
           class="tag"
-          ng-repeat="splitProp in processValue.split('|')"
+          ng-repeat="splitProp in processValue.split('|') track by $index"
         >
           {{splitProp}}
         </div>
